--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -2,57 +2,23 @@
 <html lang="en">
   <head>
     <title>Outils d'analyse des donn&eacute;es intranet SGDF</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="http://malsup.github.com/jquery.form.js"></script> 
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.css"/>
- 	<script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.js"></script>
+ 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+ 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </head>
   <body>
   <H1>Outils d'analyse des donn&eacute;es intranet SGDF</H1>
   <h2>Analyseur en ligne</h2>
     
-<script type="text/javascript">
-
-	$(document).ready(function() { 
-		$('#formCheck').ajaxForm({
-				   "formId": "formCheck",
-			        "method": "POST",
-			        "url": "/outilssgdf/api/v1/check",
-					"success" : function(data, statut) {
-						var dataset = [];
-					  	jQuery.each(data, function(i, val)
-				    	{
-				    		var d = [];
-				    		d.push(val.unite);
-				    		d.push(val.nom);
-				    		d.push(val.probleme);
-				    		dataset.push(d);
-				    	})
-				    	$('#checkTable').DataTable( {
-				        	data: dataset,
-				        	paging: true,
-				        	searching: true,
-				        	bInfo : false,
-				        	columns: [
-				           	 { title: "Unit&eacute;" },
-				           	 { title: "Nom" },
-				           	 { title: "Erreur" },
-				        	]
-				    	} );
-					}
-	       });
-	}); 
-</script>
-
 <form id="formAnalyseEnLigne" method="post" action="/outilssgdf/api/v1/analyseenligne" enctype="multipart/form-data">
-    <label for="pseudo">identifiant :</label>
+    <label for="pseudo">Votre identifiant intranet :</label>
        <input type="text" name="identifiant" id="identifiant" />
-       
        <br />
-       <label for="pass">Votre mot de passe :</label>
+       <label for="pass">Votre mot de passe intranet :</label>
 	   <input type="password" name="password" id="password" />
 	   <br />
-       <label for="code_structure">Votre code de sttucture :</label>
+       <label for="code_structure">Votre code de structure :</label>
        <input type="text" name="code_structure" id="code_structure" />
        <input type="submit" value="Envoyer" />
 </form>
