--- a/servlet/src/main/webapp/index.html
+++ b/servlet/src/main/webapp/index.html
@@ -9,9 +9,24 @@
   </head>
   <body>
   <H1>Outils d'analyse des donn&eacute;es intranet SGDF</H1>
-  <h2>Analyseur en ligne</h2>
-    
-<form id="formAnalyseEnLigne" method="post" action="/outilssgdf/api/v1/analyseenligne" enctype="multipart/form-data">
+
+<h2>Analyseur en ligne (Responsables)</h2>
+<form id="formAnalyseEnLigneResponsable" method="post" action="/outilssgdf/api/v1/analyseenligne_responsables" enctype="multipart/form-data">
+    <label for="pseudo">Votre identifiant intranet :</label>
+       <input type="text" name="identifiant" id="identifiant" />
+       <br />
+       <label for="pass">Votre mot de passe intranet :</label>
+	   <input type="password" name="password" id="password" />
+	   <br />
+       <label for="code_structure">Votre code de structure :</label>
+       <input type="text" name="code_structure" id="code_structure" />
+       <input type="submit" value="Envoyer" />
+</form>
+
+<HR>
+
+<h2>Analyseur en ligne (Jeunes)</h2>
+<form id="formAnalyseEnLigneJeunes" method="post" action="/outilssgdf/api/v1/analyseenligne_jeunes" enctype="multipart/form-data">
     <label for="pseudo">Votre identifiant intranet :</label>
        <input type="text" name="identifiant" id="identifiant" />
        <br />
